2001-10-10  Jochen Hoenicke  <jochen@gnu.org>

	* stage2/fsys_reiserfs.c (reiserfs_mount):  Don't look at
	the superblock field s_journal_block_count anymore.  It used
	to contain 0, it never contained a valid value, and now I
	have a report that it can contain an invalid value.
	Bug reported by Jim Caley <caley@chesco.com>.
	
2001-09-24  Jochen Hoenicke  <jochen@gnu.org>

	* stage2/fsys_reiserfs.c (reiserfs_dir):  Set errnum to 
	ERR_FSYS_CORRUPT if a symlink can't be read for some reason,
	but no error is set by read.
	
2001-08-08  OKUJI Yoshinori  <okuji@gnu.org>

	From Derrik Pates <dpates@dsdk12.net>:
	* stage2/asm.S [!STAGE1_5] (grub_halt): Set the level of APM
	support to 1.1, before turning off the power state.
	
2001-08-08  OKUJI Yoshinori  <okuji@gnu.org>

	* util/grub-md5-crypt.in: Prefix backquotes with backslashes in
	strings.  From Fernando Silveira.
	
2001-08-02  Gordon Matzigkeit  <gord@fig.org>

	* stage2/common.c (init_bios_info): Ignore zero-length memory
	ranges.  From Derrik Pates.

2001-07-26  Jochen Hoenicke  <jochen@gnu.org>

	* stage2/Makefile.am (libgrub_a_CFLAGS): Enable USE_MD5_PASSWORDS
	for libgrub.  Previously that was implicitly done by configure.in
	until the patch from 2001-07-04, which moved that flag from CFLAGS
	to FSYS_CFLAGS.  Reported by YAMAGUCHI Shingo
	<shingo@kip.iis.toyama-u.ac.jp>

2001-07-13  OKUJI Yoshinori  <okuji@gnu.org>

	* util/grub-install.in (convert): Recognize the naming scheme
	for Linux devfs floppy devices. Reported by Jason Thomas
	<jason@topic.com.au>.
	
2001-07-07  OKUJI Yoshinori  <okuji@gnu.org>

	* netboot/compile: New file. This was also missing... How many
	``compile''s does automake want?
	
2001-07-07  OKUJI Yoshinori  <okuji@gnu.org>

	From Jan Zerebecki <jan.list@elite-pferde.de>:
	* acinclude.m4 (grub_DEFINE_FILE): Escape double-quotations as
	well.
	
2001-07-05  OKUJI Yoshinori  <okuji@gnu.org>

	* configure.in (AM_INIT_AUTOMAKE): Set the version number to
	0.90.
